--- a/styles/app/index.styl
+++ b/styles/app/index.styl
@@ -1,6 +1,2 @@
 @import "./normalize.styl";
-
-*
-  -webkit-box-sizing: border-box
-  -moz-box-sizing: border-box
-  box-sizing: border-box
+@import "./grid.styl";
