--- a/views/app/footer.html
+++ b/views/app/footer.html
@@ -1,5 +1,5 @@
 <footer:>
-  <footer class='footer'>
+  <footer class="footer">
     <div class="grid">
       <div class="col-12-12">
         <small>&copy; 2013 Kenan Yildirim</small>
