--- a/views/index.jade
+++ b/views/index.jade
@@ -2,3 +2,11 @@ extends layout
 
 block content
   h1 nwitch
+
+  iframe(
+    width='300',
+    height='400',
+    frameborder='0',
+    scrolling='no',
+    id='chat_embed',
+    src=embed)
