--- a/views/index.jade
+++ b/views/index.jade
@@ -13,4 +13,8 @@ block content
         id='chat_embed',
         src=embed)
 
+  footer.grid(role='contentinfo')
+    .col-1-1
+      p nwitch &copy; 2013 Kenan Yildirim
+
   script(src='gen/build.js')
