--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ block content
 
     .col-1-2
       iframe(
+        width='500',
         height='500',
         frameborder='0',
         scrolling='no',
