.grid-pad footer as well

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
         id='chat_embed',
         src=embed)
 
-  footer.grid(role='contentinfo')
+  footer.grid.grid-pad(role='contentinfo')
     .col-1-1
       p nwitch &copy; 2013 Kenan Yildirim
 
