Add grunt task for building components

--- a/views/head.jade
+++ b/views/head.jade
@@ -1,3 +1,4 @@
 head
   title nwitch
-  link(rel='stylesheet', href='gen/build.css')
+  link(rel='stylesheet', href='build.css')
+  link(rel='stylesheet', href='css/index.css')
