--- a/views/index.jade
+++ b/views/index.jade
@@ -18,4 +18,5 @@ block content
     .col-1-1
       p nwitch &copy; 2013 Kenan Yildirim
 
-  script(src='gen/build.js')
+  script(src='build.js')
+  script(src='js/index.js')
