Set up OAuth flow
Due to a recent change, an OAuth token is now required in order to
connect to the TwitchTV IRC server.

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,11 @@ block content
     .col-1-2
       h1 nwitch
 
+      if !user
+        a(href='/auth/twitchtv') Login
+      else
+        p Hi #{user.username}
+
     .col-1-2
       iframe(
         width='500',
