--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ block content
             a Plugin3
 
         div
-          p &copy; 2013 Kenan Yildirim
+          p &copy; 2013–2014 Kenan Yildirim
 
 
   #content.snap-content
